--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			<center>
 				<h2>Connecting</h2>
 			</center>
-			<p>If you cannot connect to the server, check if you have some anti virus or firewall blocking the connection, make sure you selected a server to connect to, and make sure the server you're connecting to is up.</p>
+			<p>If you cannot connect to the server, check if you have some anti virus or firewall blocking the connection</p>
 		</div>
 	</div> <canvas id="canvas" width="800" height="600"></canvas> <input type="text" id="chat_textbox" placeholder="Press enter to chat!" maxlength="200" />
 	<div style="font-family:'Ubuntu'">&nbsp;</div>
